test/zora/fixtures/plan_no_assertion_fail_out.txt
TAP version 13
# Make a plan, don't do any assertions
file://$TAPE/index.js:$LINE
  function rethrow () { throw err }
                        ^

Error: Test ended before the planned number
          planned: 1
          actual: 0
          
    at Test.run (file://$TAPE/index.js:$LINE:$COL)
    at process.processTicksAndRejections (node:internal/process/task_queues:$LINE:$COL)
    at async TestRunner.run (file://$TAPE/index.js:$LINE:$COL)
